// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup component should render correctly when label is not a string with Children = Array 1`] = `
<Component
  fieldId="id"
  label={
    <div>
      label
    </div>
  }
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="id"
    >
      <span
        className="pf-c-form__label-text"
      >
        <div>
          label
        </div>
      </span>
    </label>
    <input
      aria-label="label"
    />
    <input
      id="id"
    />
    <input />
  </div>
</Component>
`;

exports[`FormGroup component should render default form group variant 1`] = `
<Component
  fieldId="label-id"
  helperText="this is helper text"
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      <span
        className="pf-c-form__label-text"
      >
        label
      </span>
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      this is helper text
    </div>
  </div>
</Component>
`;

exports[`FormGroup component should render form group invalid variant 1`] = `
<Component
  fieldId="label-id"
  helperTextInvalid="Invalid FormGroup"
  isValid={false}
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      <span
        className="pf-c-form__label-text"
      >
        label
      </span>
    </label>
    <input
      id="id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text pf-m-error"
      id="label-id-helper"
    >
      Invalid FormGroup
    </div>
  </div>
</Component>
`;

exports[`FormGroup component should render form group required variant 1`] = `
<Component
  fieldId="id"
  isRequired={true}
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="id"
    >
      <span
        className="pf-c-form__label-text"
      >
        label
      </span>
      <span
        aria-hidden="true"
        className="pf-c-form__label-required"
      >
        *
      </span>
    </label>
    <input
      id="id"
    />
  </div>
</Component>
`;

exports[`FormGroup component should render form group variant with function helperText 1`] = `
<Component
  fieldId="label-id"
  helperText={
    <div>
      label
    </div>
  }
  label="Label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      <span
        className="pf-c-form__label-text"
      >
        Label
      </span>
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      <div>
        label
      </div>
    </div>
  </div>
</Component>
`;

exports[`FormGroup component should render form group variant with function label 1`] = `
<Component
  fieldId="id"
  label={
    <div>
      label
    </div>
  }
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="id"
    >
      <span
        className="pf-c-form__label-text"
      >
        <div>
          label
        </div>
      </span>
    </label>
    <input
      aria-label="input"
    />
  </div>
</Component>
`;

exports[`FormGroup component should render form group variant with node helperText 1`] = `
<Component
  fieldId="label-id"
  helperText={
    <h1>
      Header
    </h1>
  }
  label="Label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      <span
        className="pf-c-form__label-text"
      >
        Label
      </span>
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      <h1>
        Header
      </h1>
    </div>
  </div>
</Component>
`;

exports[`FormGroup component should render form group variant with node label 1`] = `
<Component
  fieldId="id"
  label={
    <h1>
      Header
    </h1>
  }
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="id"
    >
      <span
        className="pf-c-form__label-text"
      >
        <h1>
          Header
        </h1>
      </span>
    </label>
    <input
      aria-label="input"
    />
  </div>
</Component>
`;

exports[`FormGroup component should render form group variant with required label 1`] = `
<Component
  fieldId="label-id"
  isRequired={true}
  label="label"
>
  <div
    className="pf-c-form__group"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      <span
        className="pf-c-form__label-text"
      >
        label
      </span>
      <span
        aria-hidden="true"
        className="pf-c-form__label-required"
      >
        *
      </span>
    </label>
    <input
      id="label-id"
    />
  </div>
</Component>
`;

exports[`FormGroup component should render form group variant without label 1`] = `
<Component
  fieldId="id"
>
  <div
    className="pf-c-form__group"
  >
    <input
      aria-label="input"
    />
  </div>
</Component>
`;

exports[`FormGroup component should render horizontal form group variant 1`] = `
<Component
  isHorizontal={true}
>
  <form
    className="pf-c-form pf-m-horizontal"
    noValidate={true}
  >
    <Component
      fieldId="label-id"
      helperText="this is helperText"
      label="label"
    >
      <div
        className="pf-c-form__group"
      >
        <label
          className="pf-c-form__label"
          htmlFor="label-id"
        >
          <span
            className="pf-c-form__label-text"
          >
            label
          </span>
        </label>
        <div
          className="pf-c-form__horizontal-group"
        >
          <input
            id="label-id"
          />
        </div>
        <div
          aria-live="polite"
          className="pf-c-form__helper-text"
          id="label-id-helper"
        >
          this is helperText
        </div>
      </div>
    </Component>
  </form>
</Component>
`;

exports[`FormGroup component should render inline form group variant 1`] = `
<Component
  fieldId="label-id"
  helperText="this is helper text"
  isInline={true}
  label="label"
>
  <div
    className="pf-c-form__group pf-m-inline"
  >
    <label
      className="pf-c-form__label"
      htmlFor="label-id"
    >
      <span
        className="pf-c-form__label-text"
      >
        label
      </span>
    </label>
    <input
      id="label-id"
    />
    <div
      aria-live="polite"
      className="pf-c-form__helper-text"
      id="label-id-helper"
    >
      this is helper text
    </div>
  </div>
</Component>
`;
